setup all the pages breadcrumb and resolve appointment edit model

--- a/views/user/appointment/index.twig
+++ b/views/user/appointment/index.twig
@@ -21,6 +21,10 @@
         border-radius: .475rem;
         padding: .75rem 1rem;
     }
+    .form-check.form-check-success .form-check-input:checked {
+        background-color: #50cd89 !important;
+        border-color: #50cd89 !important;
+    }
 </style>
     {% if loginType != "firm" %}
     <style>
@@ -77,7 +81,7 @@
 
                     </div>
                 </div>
-
+            {% if loginType != "client" %}
             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
@@ -150,7 +154,7 @@
                     </div>
                 </div>
             </div>
-
+            {% endif %}
             <div class="modal fade" id="kt_modal_view_event" tabindex="-1" aria-hidden="true">
                 <!--begin::Modal dialog-->
                 <div class="modal-dialog mw-650px">
@@ -160,8 +164,8 @@
                         <div class="modal-header pb-5 border-0 d-block">
                             <div class="row">
                                 <div class="col-md-6 text-start">
-                                    <div class="btn btn-icon btn-sm btn-color-gray-500 btn-active-icon-primary" data-bs-toggle="tooltip" title="Hide Event" data-bs-dismiss="modal">
-                                            <span class="svg-icon svg-icon-1">
+                                    <div class="btn btn-icon btn-sm btn-color-gray-500 btn-active-icon-primary" data-bs-toggle="tooltip" title="Close" data-bs-dismiss="modal">
+                                            <span class="svg-icon svg-icon-1" style="color: #ed141f">
 														<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 															<rect opacity="0.5" x="6" y="17.3137" width="16" height="2" rx="1" transform="rotate(-45 6 17.3137)" fill="currentColor" />
 															<rect x="7.41422" y="6" width="16" height="2" rx="1" transform="rotate(45 7.41422 6)" fill="currentColor" />
@@ -171,7 +175,7 @@
                                 </div>
                                 <div class="col-md-6 text-end">
                                     <button class="btn btn-icon btn-sm btn-color-gray-400 btn-active-icon-primary me-2 edit_appointment" title="Edit Appointment" id="editEventBtn">
-    <span class="svg-icon svg-icon-2">
+    <span class="svg-icon svg-icon-2" style="color: blue">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
             <path opacity="0.3" d="M21.4 8.35303L19.241 10.511L13.485 4.755L15.643 2.59595C16.0248 2.21423 16.5426 1.99988 17.0825 1.99988C17.6224 1.99988 18.1402 2.21423 18.522 2.59595L21.4 5.474C21.7817 5.85581 21.9962 6.37355 21.9962 6.91345C21.9962 7.45335 21.7817 7.97122 21.4 8.35303ZM3.68699 21.932L9.88699 19.865L4.13099 14.109L2.06399 20.309C1.98815 20.5354 1.97703 20.7787 2.03189 21.0111C2.08674 21.2436 2.2054 21.4561 2.37449 21.6248C2.54359 21.7934 2.75641 21.9115 2.989 21.9658C3.22158 22.0201 3.4647 22.0084 3.69099 21.932H3.68699Z" fill="currentColor" />
             <path d="M5.574 21.3L3.692 21.928C3.46591 22.0032 3.22334 22.0141 2.99144 21.9594C2.75954 21.9046 2.54744 21.7864 2.3789 21.6179C2.21036 21.4495 2.09202 21.2375 2.03711 21.0056C1.9822 20.7737 1.99289 20.5312 2.06799 20.3051L2.696 18.422L5.574 21.3ZM4.13499 14.105L9.891 19.861L19.245 10.507L13.489 4.75098L4.13499 14.105Z" fill="currentColor" />
@@ -179,7 +183,7 @@
     </span>
                                     </button>
                                     <button type="button" id="delete" class="btn btn-icon btn-sm btn-color-gray-400 btn-active-icon-danger me-2 delete_appointment"  title="Delete Appointment" onclick="deleteAppointment()" >
-                                            <span class="svg-icon svg-icon-2">
+                                            <span class="svg-icon svg-icon-2" style="color: #ed141f">
 														<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 															<path d="M5 9C5 8.44772 5.44772 8 6 8H18C18.5523 8 19 8.44772 19 9V18C19 19.6569 17.6569 21 16 21H8C6.34315 21 5 19.6569 5 18V9Z" fill="currentColor" />
 															<path opacity="0.5" d="M5 5C5 4.44772 5.44772 4 6 4H18C18.5523 4 19 4.44772 19 5V5C19 5.55228 18.5523 6 18 6H6C5.44772 6 5 5.55228 5 5V5Z" fill="currentColor" />
@@ -187,7 +191,7 @@
 														</svg>
 													</span>
                                     </button>
-                                    <a id="start-meeting" type="button" class="btn btn-icon btn-sm btn-color-gray-400 btn-active-icon-danger me-2"  title="Meeting"  >
+                                    <a id="start-meeting" type="button" class="btn btn-icon btn-sm btn-color-gray-400 btn-active-icon-danger me-2"  title="Meeting"  style="display: none !important;">
                                             <span class="svg-icon svg-icon-2">
 													<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-video"><polygon points="23 7 16 12 23 17 23 7"></polygon><rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect></svg>
 													</span>
@@ -197,10 +201,8 @@
                         </div>
                         <!--begin::Modal header-->
                         <!--begin::Modal body-->
-                        <div class="modal-body scroll-y mx-5 mx-xl-18 pt-0 pb-15">
-                          <div  id="clientListViewBadges">
+                        <div class="modal-body scroll-y mx-5 mx-xl-18 pt-0 pb-15"  id="clientListViewBadges">
 
-                            </div>
                         </div>
                         <!--end::Modal body-->
                     </div>
@@ -215,7 +217,7 @@
                             <h5 class="modal-title" id="exampleModalLabel">Edit Appointment</h5>
                             <a role="button" class=" text-dark" data-bs-dismiss="modal" aria-label="Close">
                                 <div class="btn btn-icon btn-sm btn-color-gray-500 btn-active-icon-primary" data-bs-toggle="tooltip" title="Hide Event" data-bs-dismiss="modal">
-                                            <span class="svg-icon svg-icon-1">
+                                            <span class="svg-icon svg-icon-1" onclick="closeModal()">
 														<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
 															<rect opacity="0.5" x="6" y="17.3137" width="16" height="2" rx="1" transform="rotate(-45 6 17.3137)" fill="currentColor" />
 															<rect x="7.41422" y="6" width="16" height="2" rx="1" transform="rotate(45 7.41422 6)" fill="currentColor" />
@@ -438,10 +440,12 @@
                         var editEventBtn = document.getElementById('editEventBtn');
                         editEventBtn.addEventListener('click', function () {
                             // Hide the view modal
-                            myNewModal.hide();
-
+                            // myNewModal.hide();
+                            $("#kt_modal_view_event").modal('hide');
                             // Show the edit modal
                             var editModal = new bootstrap.Modal(document.getElementById('kt_modal_edit_event'));
+                            document.querySelectorAll('.modal-backdrop.fade.show').forEach(element => element.remove());
+
                             editModal.show();
 
                             // Populate the edit modal with event data
@@ -574,7 +578,6 @@
             });
         }
         function update_event() {
-
             var id = $("#edit_id_edit").val();
             var title = $("#edit_title_edit").val();
             var dateTime = $("#edit_date").val();
