--- a/views/user/clients/members.twig
+++ b/views/user/clients/members.twig
@@ -5,17 +5,33 @@
     <div class="content d-flex flex-column flex-column-fluid" id="kt_content">
         <!--begin::Toolbar-->
         <div class="toolbar" id="kt_toolbar">
-            <!--begin::Container-->
             <div id="kt_toolbar_container" class="container-fluid d-flex flex-stack">
                 <!--begin::Page title-->
                 <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
                     <!--begin::Title-->
-                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Associates List</h1>
-
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Associates </h1>
+                    <!--end::Title-->
+                    <!--begin::Separator-->
+                    <span class="h-20px border-gray-300 border-start mx-4"></span>
+                    <!--end::Separator-->
+                    <!--begin::Breadcrumb-->
+                    <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-muted">Users</li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item">
+                            <span class="bullet bg-gray-300 w-5px h-2px"></span>
+                        </li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-dark">Associates</li>
+                        <!--end::Item-->
+                    </ul>
+                    <!--end::Breadcrumb-->
                 </div>
-
+                <!--end::Page title-->
             </div>
-            <!--end::Container-->
         </div>
     <div class="post d-flex flex-column-fluid" id="kt_post">
     <!--begin::Container-->
@@ -42,7 +58,7 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6 text-end">
-                                    <button type="button" class="btn btn-primary  me-4" data-bs-toggle="modal" data-bs-target="#inputFormModal">
+                                    <button type="button" class="btn btn-primary  me-4" data-bs-toggle="modal" data-bs-target="#inputFormModalAssociates">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-external-link"><path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path><polyline points="15 3 21 3 21 9"></polyline><line x1="10" y1="14" x2="21" y2="3"></line></svg>
                                         <span class="btn-text-inner">Invite</span>
                                     </button>
@@ -74,48 +90,6 @@
         </div>
     </div>
     </div>
-    </div>
-    <div class="modal fade inputForm-modal" id="inputFormModal" tabindex="-1" role="dialog" aria-labelledby="inputFormModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
-
-                <div class="modal-header" id="inputFormModalLabel">
-                    <h5 class="modal-title">Invite <b>Members</b></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"> </button>
-                </div>
-                <div class="modal-body">
-                    <form class="mt-0" id="inviteForm">
-                        <div class="form-group">
-                            <div class="input-group mb-3">
-                                                            <span class="input-group-text">
-                                                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                                                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                                                                    <rect x="3" y="5" width="18" height="14" rx="2"></rect>
-                                                                    <polyline points="3 7 12 13 21 7"></polyline>
-                                                                </svg>
-                                                            </span>
-                                <input type="text" class="form-control" placeholder="Email" name="email" >
-                                <input type="hidden" name="firm_id" value="{{ FirmId }}" >
-                                <input type="hidden" name="csrf" value="{{csrf}}">
-                            </div>
-                        </div>
-                        <div class="d-none">
-                            <div class="custom-control custom-radio custom-control-inline" style="padding-left: 10px;">
-                                <input type="radio" id="member" value="member" name="invite" checked class="custom-control-input">
-                                <label class="custom-control-label" for="member">Member Invite</label>
-                            </div>
-
-                        </div>
-
-                    </form>
-
-                </div>
-                <div class="modal-footer">
-                    <button type="submit" class="btn btn-light-danger mt-2 mb-2 btn-no-effect" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary mt-2 mb-2 btn-no-effect" data-bs-dismiss="modal" id="btn-profile" onclick="send_invite()">Send Invite</button>
-                </div>
-            </div>
-        </div>
     </div>
     <div class="modal fade" id="editExampleModal" tabindex="-1" aria-labelledby="editExampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered mw-650px">
@@ -192,40 +166,7 @@
                 ]
             });
         });
-        function send_invite() {
-            var form_Data = new FormData(document.getElementById("inviteForm"));
-            document.getElementById('btn-profile').disabled = true;
 
-            $.ajax({
-                url: "/user/send_invite",
-                type: "POST",
-                data: form_Data,
-                contentType: false,
-                cache: false,
-                processData: false,
-                success: function (dataResult) {
-                    console.log(dataResult);
-                    if (dataResult == 1) {
-                        $('#table').DataTable().ajax.reload(null, false);
-                        document.getElementById('btn-profile').disabled = false;
-                        $('#inputFormModal').modal('hide');
-                        toastr.success('Invitation Sent.');
-                        document.getElementById("inviteForm").reset();
-
-                    } else if (dataResult == 2) {
-                        document.getElementById('btn-profile').disabled = false;
-                        toastr.error("Required fields are empty!");
-                    }else if (dataResult == 3) {
-                        document.getElementById('btn-profile').disabled = false;
-                        toastr.error("Email Already Exist");
-                    }else {
-                        document.getElementById('btn-profile').disabled = false;
-                        toastr.error('Somthing Went Wrong.');
-                    }
-
-                }
-            });
-        }
         function userStatus(userID, status) {
             if(status == 0){
                 var currStatus= "block";
