--- a/views/user/includes/footer.twig
+++ b/views/user/includes/footer.twig
@@ -26,6 +26,90 @@
 </div>
 
 </div>
+<div class="modal fade inputForm-modal" id="inputFormModal" tabindex="-1" role="dialog" aria-labelledby="inputFormModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header" id="inputFormModalLabel">
+                <h5 class="modal-title">Invite <b>Clients</b></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"></button>
+            </div>
+            <div class="modal-body">
+                <form class="mt-0" id="inviteForm">
+                    <div class="form-group">
+                        <div class="input-group mb-3">
+                                                            <span class="input-group-text">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                                                    <rect x="3" y="5" width="18" height="14" rx="2"></rect>
+                                                                    <polyline points="3 7 12 13 21 7"></polyline>
+                                                                </svg>
+                                                            </span>
+                            <input type="text" class="form-control" placeholder="Email" name="email" >
+                            <input type="hidden" name="firm_id" value="{{ FirmId }}" >
+                            <input type="hidden" name="csrf" value="{{csrf}}">
+                        </div>
+                    </div>
+                    <div class="d-none">
+                        <div class="custom-control custom-radio custom-control-inline ml-4" style="padding-left: 40px;">
+                            <input type="radio" id="client" value="client" checked name="invite" class="custom-control-input">
+                            <label class="custom-control-label" for="client">Client Invite</label>
+                        </div>
+                    </div>
+
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-light-danger mt-2 mb-2 btn-no-effect" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary mt-2 mb-2 btn-no-effect" data-bs-dismiss="modal" id="btn-profile" onclick="send_invite()">Send Invite</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="modal fade inputForm-modal" id="inputFormModalAssociates" tabindex="-1" role="dialog" aria-labelledby="inputFormModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header" id="inputFormModalLabel">
+                <h5 class="modal-title">Invite <b>Members</b></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-hidden="true"> </button>
+            </div>
+            <div class="modal-body">
+                <form class="mt-0" id="inviteAssociate">
+                    <div class="form-group">
+                        <div class="input-group mb-3">
+                                                            <span class="input-group-text">
+                                                                <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                                                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                                                                    <rect x="3" y="5" width="18" height="14" rx="2"></rect>
+                                                                    <polyline points="3 7 12 13 21 7"></polyline>
+                                                                </svg>
+                                                            </span>
+                            <input type="text" class="form-control" placeholder="Email" name="email" >
+                            <input type="hidden" name="firm_id" value="{{ FirmId }}" >
+                            <input type="hidden" name="csrf" value="{{csrf}}">
+                        </div>
+                    </div>
+                    <div class="d-none">
+                        <div class="custom-control custom-radio custom-control-inline" style="padding-left: 10px;">
+                            <input type="radio" id="member" value="member" name="invite" checked class="custom-control-input">
+                            <label class="custom-control-label" for="member">Member Invite</label>
+                        </div>
+
+                    </div>
+
+                </form>
+
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-light-danger mt-2 mb-2 btn-no-effect" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-primary mt-2 mb-2 btn-no-effect" data-bs-dismiss="modal" id="btn-profile" onclick="send_invite_associate()">Send Invite</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div id="kt_scrolltop" class="scrolltop" data-kt-scrolltop="true">
     <!--begin::Svg Icon | path: icons/duotune/arrows/arr066.svg-->
@@ -86,7 +170,76 @@
 </script>
 
 <script>
+    function send_invite_associate() {
+        var form_Data = new FormData(document.getElementById("inviteAssociate"));
+        document.getElementById('btn-profile').disabled = true;
 
+        $.ajax({
+            url: "/user/send_invite",
+            type: "POST",
+            data: form_Data,
+            contentType: false,
+            cache: false,
+            processData: false,
+            success: function (dataResult) {
+                console.log(dataResult);
+                if (dataResult == 1) {
+                    $('#table').DataTable().ajax.reload(null, false);
+                    document.getElementById('btn-profile').disabled = false;
+                    $('#inputFormModalAssociates').modal('hide');
+                    toastr.success('Invitation Sent.');
+                    document.getElementById("inviteAssociate").reset();
+
+                } else if (dataResult == 2) {
+                    document.getElementById('btn-profile').disabled = false;
+                    toastr.error("Required fields are empty!");
+                }else if (dataResult == 3) {
+                    document.getElementById('btn-profile').disabled = false;
+                    document.getElementById("inviteAssociate").reset();
+                    toastr.error("Email Already Exist");
+                }else {
+                    document.getElementById('btn-profile').disabled = false;
+                    document.getElementById("inviteAssociate").reset();
+                    toastr.error('Something Went Wrong.');
+                }
+
+            }
+        });
+    }
+    function send_invite() {
+        var form_Data = new FormData(document.getElementById("inviteForm"));
+        document.getElementById('btn-profile').disabled = true;
+
+        $.ajax({
+            url: "/user/send_invite",
+            type: "POST",
+            data: form_Data,
+            contentType: false,
+            cache: false,
+            processData: false,
+            success: function (dataResult) {
+                console.log(dataResult);
+                if (dataResult == 1) {
+                    $('#table').DataTable().ajax.reload(null, false);
+                    document.getElementById('btn-profile').disabled = false;
+                    $('#inputFormModal').modal('hide');
+                    toastr.success('Invitation Sent.');
+                    document.getElementById("inviteForm").reset();
+
+                } else if (dataResult == 2) {
+                    document.getElementById('btn-profile').disabled = false;
+                    toastr.error("Required fields are empty!");
+                } else if (dataResult == 3) {
+                    document.getElementById('btn-profile').disabled = false;
+                    toastr.error("Email Already Exist");
+                }else {
+                    document.getElementById('btn-profile').disabled = false;
+                    toastr.error('Somthing Went Wrong.');
+                }
+
+            }
+        });
+    }
     $(document).ready(function() {
         var loginId = '{{ loginId }}'; // Replace with your actual loginId
         var ringtone = document.getElementById('ringtone');
