--- a/views/user/includes/sidebar.twig
+++ b/views/user/includes/sidebar.twig
@@ -47,9 +47,12 @@
 											<span class="svg-icon svg-icon-2">
 
                                                 <!--begin::Svg Icon | path: assets/media/icons/duotune/general/gen001.svg-->
+                                                <!--begin::Svg Icon | path: assets/media/icons/duotune/layouts/lay002.svg-->
 <span class="svg-icon svg-icon-muted svg-icon-1x"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-<path d="M11 2.375L2 9.575V20.575C2 21.175 2.4 21.575 3 21.575H9C9.6 21.575 10 21.175 10 20.575V14.575C10 13.975 10.4 13.575 11 13.575H13C13.6 13.575 14 13.975 14 14.575V20.575C14 21.175 14.4 21.575 15 21.575H21C21.6 21.575 22 21.175 22 20.575V9.575L13 2.375C12.4 1.875 11.6 1.875 11 2.375Z" fill="currentColor"/>
+<path d="M6 7H3C2.4 7 2 6.6 2 6V3C2 2.4 2.4 2 3 2H6C6.6 2 7 2.4 7 3V6C7 6.6 6.6 7 6 7Z" fill="currentColor"/>
+<path opacity="0.3" d="M13 7H10C9.4 7 9 6.6 9 6V3C9 2.4 9.4 2 10 2H13C13.6 2 14 2.4 14 3V6C14 6.6 13.6 7 13 7ZM21 6V3C21 2.4 20.6 2 20 2H17C16.4 2 16 2.4 16 3V6C16 6.6 16.4 7 17 7H20C20.6 7 21 6.6 21 6ZM7 13V10C7 9.4 6.6 9 6 9H3C2.4 9 2 9.4 2 10V13C2 13.6 2.4 14 3 14H6C6.6 14 7 13.6 7 13ZM14 13V10C14 9.4 13.6 9 13 9H10C9.4 9 9 9.4 9 10V13C9 13.6 9.4 14 10 14H13C13.6 14 14 13.6 14 13ZM21 13V10C21 9.4 20.6 9 20 9H17C16.4 9 16 9.4 16 10V13C16 13.6 16.4 14 17 14H20C20.6 14 21 13.6 21 13ZM7 20V17C7 16.4 6.6 16 6 16H3C2.4 16 2 16.4 2 17V20C2 20.6 2.4 21 3 21H6C6.6 21 7 20.6 7 20ZM14 20V17C14 16.4 13.6 16 13 16H10C9.4 16 9 16.4 9 17V20C9 20.6 9.4 21 10 21H13C13.6 21 14 20.6 14 20ZM21 20V17C21 16.4 20.6 16 20 16H17C16.4 16 16 16.4 16 17V20C16 20.6 16.4 21 17 21H20C20.6 21 21 20.6 21 20Z" fill="currentColor"/>
 </svg></span>
+                                                <!--end::Svg Icon-->
                                                 <!--end::Svg Icon-->
 											</span>
                                             <!--end::Svg Icon-->
@@ -73,6 +76,7 @@
                         <span class="menu-title">Appointments</span>
                     </a>
                 </div>
+                {% if loginType == "firm" %}
                 <div data-kt-menu-trigger="click" class="menu-item {% if route == '/user/clients' or route == '/user/members'  %} here show {% endif %} menu-accordion">
 									<span class="menu-link">
 										<span class="menu-icon">
@@ -111,6 +115,7 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
                 <div class="menu-item">
                     <a class="menu-link {% if route == '/user/chat' %}active{% endif %}" href="/user/chat">
 										<span class="menu-icon">
@@ -171,7 +176,7 @@
 											</span>
                                             <!--end::Svg Icon-->
 										</span>
-										<span class="menu-title">Invoice</span>
+										<span class="menu-title">Invoices</span>
 										<span class="menu-arrow"></span>
 									</span>
                     <div class="menu-sub menu-sub-accordion menu-active-bg">
@@ -208,7 +213,7 @@
 											</span>
                                             <!--end::Svg Icon-->
 										</span>
-                            <span class="menu-title">Invoice</span>
+                            <span class="menu-title">Invoices</span>
                         </a>
                     </div>
                 {% endif %}
