--- a/views/user/invoice/list.twig
+++ b/views/user/invoice/list.twig
@@ -10,7 +10,7 @@
                 <!--begin::Page title-->
                 <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
                     <!--begin::Title-->
-                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Invoice List</h1>
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">Invoices</h1>
 
                 </div>
 
