--- a/views/user/invoice/view_invoice.twig
+++ b/views/user/invoice/view_invoice.twig
@@ -10,10 +10,28 @@
                 <!--begin::Page title-->
                 <div data-kt-swapper="true" data-kt-swapper-mode="prepend" data-kt-swapper-parent="{default: '#kt_content_container', 'lg': '#kt_toolbar_container'}" class="page-title d-flex align-items-center flex-wrap me-3 mb-5 mb-lg-0">
                     <!--begin::Title-->
-                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">View Invoice</h1>
-
+                    <h1 class="d-flex text-dark fw-bolder fs-3 align-items-center my-1">View Invoice </h1>
+                    <!--end::Title-->
+                    <!--begin::Separator-->
+                    <span class="h-20px border-gray-300 border-start mx-4"></span>
+                    <!--end::Separator-->
+                    <!--begin::Breadcrumb-->
+                    <ul class="breadcrumb breadcrumb-separatorless fw-bold fs-7 my-1">
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-muted">Invoices</li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item">
+                            <span class="bullet bg-gray-300 w-5px h-2px"></span>
+                        </li>
+                        <!--end::Item-->
+                        <!--begin::Item-->
+                        <li class="breadcrumb-item text-dark">View Invoice</li>
+                        <!--end::Item-->
+                    </ul>
+                    <!--end::Breadcrumb-->
                 </div>
-
+                <!--end::Page title-->
             </div>
             <!--end::Container-->
         </div>
@@ -382,13 +400,13 @@
                     console.log(data);
                     $("#btn").prop("disabled", false);
                     document.getElementById("btn").innerHTML = "Pay Invoice";
-                    if (data == '1') {
+                    if (data['statusCode'] == '200') {
                        location.reload();
                         $('#result').html('<div class="alert alert-success">'+data['message']+'</div>');
                         // window.location.href = "/contact-form";
                     } else {
                         document.getElementById("uploadForm").reset();
-                        $('#result').html('<div class="alert alert-danger">'+data['message']+'</div>');
+                        $('#card-errors').html('<div class="alert alert-danger">'+data['message']+'</div>');
                     }
                 },
                 error: function() {
