--- a/views/user/document_hub/client_index.twig
+++ b/views/user/document_hub/client_index.twig
@@ -10,7 +10,11 @@
             </div>
         </div>
     </div>
-
+        <style>
+            table.dataTable{
+                margin-top: 1px !important;
+            }
+        </style>
 
     <div class="post d-flex flex-column-fluid" id="kt_post">
         <div id="kt_content_container" class="container-fluid">
@@ -32,7 +36,7 @@
                                         <input type="text" class="form-control form-control-lg form-control-solid ps-14" name="search" id="search" placeholder="Search" />
                                     </div>
                                 </form>
-                                <h1 class="text-dark mb-10">Document Hub</h1>
+{#                                <h1 class="text-dark mb-10">Document Hub</h1>#}
                                 <div class="table-responsive">
                                     <table id="table"  class="table dt-table-hover" style="width:100%">
                                         <thead>
