--- a/views/user/client_dashboard.twig
+++ b/views/user/client_dashboard.twig
@@ -373,7 +373,7 @@
                                                         <!--begin::Link-->
                                                         <div class="text-gray-400 fw-bold fs-7">Lead by
                                                             <!--begin::Name-->
-                                                            <a href="#" class="text-primary opacity-75-hover fw-bold">{{ users[0].fname }} {{ users[0].lname }}</a>
+                                                            <a href="#" class="text-primary opacity-75-hover fw-bold">{{ users[0].company_name }}</a>
                                                             <!--end::Name-->
                                                         </div>
                                                         <!--end::Link-->
